[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Alex Kinnane <17098249+akinnane@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "*" 
hex = "*"
log = "*"
phf = { version = "*", features = ["macros"] }

